# llm-agent-biomedical

./: .gitignore  Makefile  dev-requirements.txt  file_downloader.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/medical_assistant/: assistant.py
app/vectordb_construction/: document_scrapper.py  vector_db_builder.py
assets/: introduction.md
shell_scripts/: update_dev_environment.sh  update_environment.sh
